# blockframe-rs

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  TODO.md  blockframe.rc  build.rs  comments_checklist.md  config.toml  example.txt  manifest.json  merkle_tree_changes.md  plan.md  readme.md
.cargo/: config.toml
.github/workflows/: release.yml
logs/: blockframe.log.2025-12-21  blockframe.log.2025-12-23  blockframe.log.2026-01-01  blockframe.log.2026-01-02  blockframe.log.2026-01-04
patches/winfsp-rs/: Cargo.toml  README.md
patches/winfsp-rs/filesystems/ntptfs-winfsp-rs/: Cargo.toml
patches/winfsp-rs/winfsp/: Cargo.toml
patches/winfsp-rs/winfsp-sys/: Cargo.toml  build.rs
patches/winfsp-rs/winfsp-sys/src/: lib.rs
patches/winfsp-rs/winfsp/src/: error.rs
patches/winfsp-rs/winfsp/src/filesystem/: context.rs
patches/winfsp-rs/winfsp/src/util/: handle.rs
src/: chunker.rs  config.rs  filestore.rs  lib.rs  main.rs  manifest.rs  merkle_tree.rs  node.rs  utils.rs
src/chunker/: README.md  commit.rs  generate.rs  health.rs  helpers.rs  io.rs  mod.rs  tests.rs
src/filestore/: README.md  example.json  health.rs  health_tests.rs  mod.rs  models.rs  recovery.rs  tests.rs
src/merkle_tree/: README.md  manifest.rs  mod.rs  node.rs
src/mount/: cache.rs  filesystem_unix.rs  filesystem_win.rs  mod.rs  readme.md  source.rs
src/serve/: mod.rs  routes.rs
