[package]
name = "blockframe"
version = "0.3.0"
edition = "2024"


[[bin]]
name = "blockframe"
path = "src/bin/main.rs"

[lib]
name = "blockframe"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
rand = "0.9.2"
reed-solomon-simd = "3.1.0"

# engine requirements
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
blake3 = "1.8.2"
sysinfo = "0.37.2"
memmap2 = "0.9.9"
rayon = "1.11.0"

# service layer


poem = { version = "3.1.12", features = ["static-files", "websocket"] }
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
tokio = { version = "1.48.0", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
clap = { version = "4.5.53", features = ["derive"] }
parking_lot = "0.12.5"
toml = "0.9.8"
tracing-appender = "0.2.4"
ureq = { version = "3.1.4", features = ["json"] }
tempfile = "3.24.0"

[build-dependencies]
embed-resource = "3.0.6"


# linux only
[target.'cfg(unix)'.dependencies]
libc = "0.2.178"
fuser = "0.16.0"

# windows only
[target.'cfg(windows)'.dependencies]


windows = { version = "0.62.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
] }
widestring = "1.0"
libc = "0.2"
winfsp = { version = "0.12", features = ["full", "windows-61"] }

[target.'cfg(windows)'.build-dependencies]
winfsp = "0.12"

# Improve debug build performance without sacrificing debuggability
[profile.dev]
opt-level = 1          # Basic optimization - huge performance gain with minimal compile time cost
debug = true           # Keep debug symbols
incremental = true     # Enable incremental compilation

[profile.release]
opt-level = 3          # Optimize for speed
lto = "thin"           # Use thin LTO instead of fat - safer for FFI
codegen-units = 16     # Allow parallel codegen - faster builds
panic = "abort"        # Remove stack unwinding
strip = true           # Strip symbols from binary

# Ensure FFI crates are not over-optimized
[profile.release.package.winfsp]
opt-level = 2          # Less aggressive optimization

[profile.release.package.winfsp-sys]
opt-level = 2          # Less aggressive optimization


[patch.crates-io]
winfsp-sys = { path = "./patches/winfsp-rs/winfsp-sys" }
